changed password and added .env to git ignore

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL=mongodb+srv://srirangasaipagala:mongodb123@cluster0.j4pkizk.mongodb.net/practice
+DB_URL=mongodb+srv://srirangasaipagala:TSNQYEJmnP08g3i7@cluster0.j4pkizk.mongodb.net/practice
